Fix modernization warnings
Upgraded modernizer is flagging a number of violations, fix them up.

Change-Id: Ibcbaa8024a5ddadac6a458d41625103846ce0010
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>